			eXtreme-Fusion 5.0.4



			eXtreme-Fusion 5.0.3 2013.07.31
- ukrycie linku do podstrony Edytor paneli - link do dodawania paneli jest na podstronie Panele
- ukrycie linku do podstrony Aktualizacja - informacja o dostępności aktualizacji oraz link do podstrony Aktualizacja jest widoczny na stronie głównej panelu admina, gdy aktualizacja jest dostępna
- wersja systemu do aktualizacji od teraz w pliku bootstrap.php
- przekierowania na logowanie po wygaśnięciu sesji przy kliknięciu w zakładkę w Panelu admina
- nowe, obiektowe API szablonów
- rozbudowanie API komentarzy o możliwość zmiany katalogu i pliku szablonu
- tłumaczenie dla modułu Kontakt
- poprawki do wyjątków OPT, dodane tłumaczenie oraz poprawiony wygląd
- możliwość tworzenia podstron o takiej samej nazwie jak katalog z systemem
- klasa Crypt może być teraz używana w adresach URL
- aktywacja przycisku 'Wróć' w mechaniźmie obsługi błędów
- optymalizacja pobierania danych użytkownika
- nowy moduł - Pliki cookies
- funkcja url() od teraz dostępna w Panelu Admina
- zakładka Ulubione w Panelu Admina
- automatyczne sprawdzanie, czy aktualizacja jest dostepna
- naprawa zarządzania panelami D&D na serwerach które mają włączoną przestarzałą funkcję magic quotes
- poprawki modułów w których występował problem "Podejrzewany atak XSS!"
- usunięcie błędu dotyczącego nadpisywania długich adresów
- czytelniejsze komunikaty dla wyjątków PDO, dostępna lokalizajca błędu składni wraz z numerem i zapytaniem.
- optymalizacja zapytań PDO przez wprowadzenie cache

        OD TERAZ DATA PRZY WERSJI OZNACZA DZIEŃ PREMIERY A NIE ROZPOCZĘCIA PRAC NAD SYSTEMEM

			eXtreme-Fusion 5.0.2 2013.06.01

- poprawka zabezpieczeń i usuniecie błędu przy włączonym register_globals - usuniecie problemu z niezadeklarowana zmienna na jednym z darmowych serwerów
- usuniecie odstępu nad jednym z paneli
- cache dla różnych szablonów o tej samej nazwie plików tymczasowych
- usuniecie błędów dotyczących MySQL w konfiguracji strict mode