@@ -82,7 +82,8 @@ if (ini_get('register_globals'))
 	}
 }
 
-defined ('SYSTEM_VERSION') || define('SYSTEM_VERSION', '5.0.4-unstable-master-repo');
+//defined ('SYSTEM_VERSION') || define('SYSTEM_VERSION', '5.0.4-unstable-master-repo');
+defined ('SYSTEM_VERSION') || define('SYSTEM_VERSION', '5.0.4');
 
 // Array-imploded data separator for Database fields
 defined('DBS') || define('DBS', '^');
